# RAnythinG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  __init__.py  __main__.py  cli.py  core.py  graph_index.py  graph_rag.py  postgres_store.py  rag_config.py  requirements.txt  retrieval.py  server.py  store.py  synthesis.py  user_store.py  workspace_store.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: marketing.css
scripts/: migrate_to_postgres.py
src/rag_app/: __init__.py  agent_cache.py  auth.py  chunking.py  core.py  database.py  docling_utils.py  graph_index.py  graph_rag.py  notebook_store.py  parsers.py  postgres_store.py  rag_config.py  retrieval.py  server.py  site_pages.py  spa.py  store.py  synthesis.py
src/rag_app/static/: app.css  app.html  app.js  landing.css  landing.js
src/rag_app/templates/: about.html  base.html  changelog.html  compare.html  docs.html  features.html  home.html  pricing.html  use_cases.html
tests/: conftest.py  test_auth_and_external.py  test_rag_eval_smoke.py  test_retrieval_unit.py  test_studio_persist.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  FlowErrorBoundary.tsx  GraphMode.tsx  Workspace.tsx  api.ts  nodes.tsx  styles.css  widgets.tsx
(+24 files in other folders)
