[project]
name = "ranything"
version = "0.1.0"
description = "RAnythinG — local privacy-first RAG with Assembly Canvas workspaces, hybrid FAISS+BM25 retrieval, on-demand GraphRAG, Studio artifacts, and a FastAPI + React UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sentence-transformers",
    "transformers",
    "torch",
    "PyPDF2",
    "python-docx",
    "faiss-cpu",
    "openai",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
